<resources>
    <string name="app_name">Lab04</string>
    <string name="add_name2">Name</string>
    <string name="add_name1">Name</string>
    <string name="add_email">Email</string>
    <string name="add_telephone">Telephone</string>
    <string name="add_password1">Password</string>
    <string name="add_password2">Re-type Password</string>
    <string name="button_signup">Sign Up</string>
    <string name="button_register">Register</string>
    <string name="button_cancel">Cancel</string>
    <string name="channel_name">channel</string>
    <string name="channel_description">channel des</string>
</resources>
